Created : Weather module

--- a/src/app/tile/weather/weather.component.html
+++ b/src/app/tile/weather/weather.component.html
@@ -1,3 +1,7 @@
-<p>
-  weather works!
-</p>
+<div class="weather-wrapper">
+  <div class="weather-card madrid">
+      <div class="weather-icon sun"></div>
+      <h1>26º</h1>
+      <p>Madrid</p>
+  </div>
+</div>
