--- a/client/src/app/components/tile-wall/tile-wall.component.html
+++ b/client/src/app/components/tile-wall/tile-wall.component.html
@@ -1,9 +1,9 @@
 <mat-grid-list cols="4">
   <mat-grid-tile
-      *ngFor="let tile of tiles"
+      *ngFor="let tile of tiles; let i = index"
       [colspan]="tile.cols"
       [rowspan]="tile.rows"
       [style.background]="tile.color">
-      <app-tile [name]="tile.name"></app-tile>
+      <app-tile class="tile" [name]="tile.name" [nb]="i"></app-tile>
   </mat-grid-tile>
 </mat-grid-list>
