Updated : Edition mode is now displaying size

--- a/client/src/app/components/tile-wall/tile-wall.component.html
+++ b/client/src/app/components/tile-wall/tile-wall.component.html
@@ -4,6 +4,6 @@
       [colspan]="tile.cols"
       [rowspan]="tile.rows"
       [style.background]="tile.color">
-      <app-tile class="tile" [name]="tile.name" [nb]="i"></app-tile>
+      <app-tile class="tile" [name]="tile.name" [nb]="i" [cols]="tile.cols" [rows]="tile.rows"></app-tile>
   </mat-grid-tile>
 </mat-grid-list>
